style.css
* {
	font-family: "Lucida Console", "Courier New", monospace;
	color: black;
	background-color: white;
}
/*body {
	margin-bottom:50px;
}*/
#home h1 {
  color: black;
  font-size: 5em;
  text-align: center;
}

#bios p{
  font-size: 18px;
  text-align: left;
  /*margin-left: 10px;*/
  margin-right: 40px;
  display: inline-block;
  white-space: normal;
  vertical-align: middle;
  line-height: 2.5;
}

#bios h1{
	margin-left: 40px;
}
/*
img {
	display: inline-block;
	margin-left: 40px;
	border: 2px solid black; 
	margin-right: 40px;
	max-width: 500px; 
	/*float: left; maybe not needed
}
*/
.container {
  border: 1px solid black;
  white-space: nowrap; /** force the elements to stay side by side **/
}
/*
p {
  display: inline-block;
  //width: 10%; /** containers width - img width - margin-left
  margin-left: 10px;
  white-space: normal;
  vertical-align: middle
}*/
/*#bios h1 p {

	padding-right: 20 px;
}*/

#wrap { max-width:90%; margin:0 auto; }
/* put a better page navigation later
.footer {
  position: fixed;
  left: 0;
  bottom: 0;
  height: 50%
  width: 100%;
  background-color: black;
  text-align: center;
  font-size: 50 px;
}*/


/*h2 {
  color: red;
  margin-left: 20px;
}
h6 {
  color: red;
  margin-left: 20px;
}*/

